[project]
name = "incident-triage-env"
version = "1.0.0"
description = "OpenEnv environment for production API incident triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "openenv-core>=0.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
